adding the container + link to new css

--- a/index.html
+++ b/index.html
@@ -5,141 +5,144 @@
 	<meta name="description" content="Hôtel 5 étoiles avec service haut de gamme" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="Content-Language" content="fr" />
-	<link href="my_style.css" rel="stylesheet" type="text/css" />
-	<link href="//fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700" rel="stylesheet" type="text/css" />
+	<link href="media/css/open_sans_condensed.min.css" rel="stylesheet" type="text/css" />
+	<link href="media/css/my_style.min.css" rel="stylesheet" type="text/css" />
+	<link href="media/css/materialize.min.css" rel="stylesheedt" type="text/css" />
 </head>
 <body>
-	<div id="partie_un">
-		<h1><a href="accueil.html"><img src="media/logo.png" alt="logo ABC"/></a></h1>
-		<div id="menu">
-			<div class="hotel">
-				<ul>
-					<li class="title_menu"><a href="hotel.html" title="hotel">Hotels</a></li>
-					<li>Chambres</li>
-					<li>Lofts</li>
-					<li>Appartements</li>
-				</ul>
-			</div>
-			<div class="restaurants">
-				<ul>
-					<li class="title_menu"><a href="restaurants.html" title="restaurant">Restaurants</a></li>
-					<li>Gastronomiques</li>
-					<li>Fast-foods</li>
-					<li>Autres saveurs</li>
-				</ul>
-			</div>
-			<div class="services">
-				<ul>
-					<li class="title_menu"><a href="services.html" title="service">Services</a></li>
-					<li>Sauna</li>
-					<li>Hammam</li>
-					<li>Jacuzzi</li>
-				</ul>
-			</div>
-			<div class="activites">
-				<ul>
-					<li class="title_menu"><a href="activites.html" title="activites">Activites</a></li>
-					<li>Accrobranche</li>
-					<li>Bowling</li>
-					<li>Golf privé</li>
-				</ul>
-			</div>
-			<div class="plus">
-				<ul>
-					<li class="title_menu"><a href="plus.html" title="plus">Plus</a></li>
-					<li>Baby sitting</li>
-					<li>Garde d'animaux</li>
-					<li>Ménage</li>
-				</ul>
+	<div class="container">
+		<div id="partie_un">
+			<h1><a href="accueil.html"><img src="media/img/logo.png" alt="logo ABC"/></a></h1>
+			<div id="menu">
+				<div class="hotel">
+					<ul>
+						<li class="title_menu"><a href="hotel.html" title="hotel">Hotels</a></li>
+						<li>Chambres</li>
+						<li>Lofts</li>
+						<li>Appartements</li>
+					</ul>
+				</div>
+				<div class="restaurants">
+					<ul>
+						<li class="title_menu"><a href="restaurants.html" title="restaurant">Restaurants</a></li>
+						<li>Gastronomiques</li>
+						<li>Fast-foods</li>
+						<li>Autres saveurs</li>
+					</ul>
+				</div>
+				<div class="services">
+					<ul>
+						<li class="title_menu"><a href="services.html" title="service">Services</a></li>
+						<li>Sauna</li>
+						<li>Hammam</li>
+						<li>Jacuzzi</li>
+					</ul>
+				</div>
+				<div class="activites">
+					<ul>
+						<li class="title_menu"><a href="activites.html" title="activites">Activites</a></li>
+						<li>Accrobranche</li>
+						<li>Bowling</li>
+						<li>Golf privé</li>
+					</ul>
+				</div>
+				<div class="plus">
+					<ul>
+						<li class="title_menu"><a href="#.html" title="plus">Plus</a></li>
+						<li>Baby sitting</li>
+						<li>Garde d'animaux</li>
+						<li>Ménage</li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="espace"></div>
-	<div class="youtube">
-		<object type="application/x-shockwave-flash" data="https://www.youtube.com/v/oWMpZmFyJCQ?hl=fr_FR&amp;version=3">
-			<param name="movie" value="https://www.youtube.com/v/oWMpZmFyJCQ?hl=fr_FR&amp;version=3" />
-			<param name="allowFullScreen" value="true" />
-		</object>
-	</div>
-	<div class="espace"></div>
-	<div class="slogan">
-		<p>Services haut de gamme et confort 5 étoiles : notre campagnie est fière de vous accueillir !</p>
 		<div class="espace"></div>
-	</div>
-	<div id="partie_deux">
-		<div id="article">
-			<div class="golf">
-				<h2>Golf</h2>
-				<p><span>Publié le 10-12-2024</span></p>
-				<img src="media/golf.jpg" alt="deux balles de golf"/>
-				<p>Le golf est ouvert 24h/24h, venez faire le parcours quand vous souhaitez ! Un mini-golf est également disponible... </p>
-				<a href="plus_golf.html" title="plus sur le golf">Lire plus &rarr;</a>
-			</div>
-			<div class="accrobranche">
-				<h2>Accrobranche</h2>
-				<p><span>Publié le 11-11-2023</span></p>
-				<p>Plusieurs parcours aventures dans les arbres jusqu'à plus de 20 mètres du sol ! Venez essayer la plus grand tyrolienne d'europe...</p>
-				<a href="plus_accrobranche.html" title="plus sur l'accrobranche">Lire plus &rarr;</a>
-			</div>
-			<div class="fast_foods">
-				<h2>Fast foods</h2>
-				<p><span>Publié le 26-01-2026</span></p>
-				<p>Venez déguster nos Big Burgers, les meilleurs de Paris. Découvrez comment ils sont fait, choisissez vous-même les ingrédients...</p>
-				<a href="plus_food.html" title="plus sur le fast foods">Lire plus &rarr;</a>
-			</div>
-			<div class="comment">
-				<h2>Commentaires</h2>
-				<p><span>Publié le 04-12-2025</span></p>
-				<p>Super expérience, le sauna est très agréable, le cadre est magnifique, la litterie est confortable, les restaurants sont délicieux, je reviendrais l'an prochain !</p>
-				<a href="plus_commentaire" title="plus de commentaire">Lire plus &rarr;</a>
-			</div>
-			<div class="images">
-				<img src="media/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/accrobranche.jpg" alt="femme perchée sur un arbre"/>
+		<div class="youtube">
+			<object type="application/x-shockwave-flash" data="https://www.youtube.com/v/oWMpZmFyJCQ?hl=fr_FR&amp;version=3">
+				<param name="movie" value="https://www.youtube.com/v/oWMpZmFyJCQ?hl=fr_FR&amp;version=3" />
+				<param name="allowFullScreen" value="true" />
+			</object>
+		</div>
+		<div class="espace"></div>
+		<div class="slogan">
+			<p>Services haut de gamme et confort 5 étoiles : notre campagnie est fière de vous accueillir !</p>
+			<div class="espace"></div>
+		</div>
+		<div id="partie_deux">
+			<div id="article">
+				<div class="golf">
+					<h2>Golf</h2>
+					<p><span>Publié le 10-12-2024</span></p>
+					<img src="media/img/golf.jpg" alt="deux balles de golf"/>
+					<p>Le golf est ouvert 24h/24h, venez faire le parcours quand vous souhaitez ! Un mini-golf est également disponible... </p>
+					<a href="#.html" title="plus sur le golf">Lire plus &rarr;</a>
+				</div>
+				<div class="accrobranche">
+					<h2>Accrobranche</h2>
+					<p><span>Publié le 11-11-2023</span></p>
+					<p>Plusieurs parcours aventures dans les arbres jusqu'à plus de 20 mètres du sol ! Venez essayer la plus grand tyrolienne d'europe...</p>
+					<a href="#.html" title="plus sur l'accrobranche">Lire plus &rarr;</a>
+				</div>
+				<div class="fast_foods">
+					<h2>Fast foods</h2>
+					<p><span>Publié le 26-01-2026</span></p>
+					<p>Venez déguster nos Big Burgers, les meilleurs de Paris. Découvrez comment ils sont fait, choisissez vous-même les ingrédients...</p>
+					<a href="#.html" title="plus sur le fast foods">Lire plus &rarr;</a>
+				</div>
+				<div class="comment">
+					<h2>Commentaires</h2>
+					<p><span>Publié le 04-12-2025</span></p>
+					<p>Super expérience, le sauna est très agréable, le cadre est magnifique, la litterie est confortable, les restaurants sont délicieux, je reviendrais l'an prochain !</p>
+					<a href="#" title="plus de commentaire">Lire plus &rarr;</a>
+				</div>
+				<div class="images">
+					<img src="media/img/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/img/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/img/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/img/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/img/accrobranche.jpg" alt="femme perchée sur un arbre"/><img src="media/img/accrobranche.jpg" alt="femme perchée sur un arbre"/>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="espace"></div>
-	<div id="partie_trois">
-		<div class="contact">
-			<h3>Nous contacter</h3>
-			<p class="adresse">42 route des poneys</p>
-			<p>07007, Jardiland</p>
-			<p class="tel">+1 234 567 89 01</p>
-			<p class="email"><a href="mailto:contact@hotels.com">contact@hotels.com</a></p>
-			<p class="support"><a href="mailto:support@hotels.com">support@hotels.com</a></p>
-		</div>
-		<div class="billet">
-			<h3>Dernier bilet</h3>
-			<p><span class="date">15 Sep 2019</span></p>
-			<p><span>Garde d'animaux</span></p>
-			<p>Nouveau service au sein de notre compagnie, laissez votre toutou une journée pour vous reposer....</p>
-			<a href="commentaires.html">6 commentaires</a>
-		</div>
-		<div class="dernier_com">
-			<h3>Dernier commentaire</h3>
-			<p><span class="date">01 Mar 2020</span></p>
-			<p><span>Merci à toute l'équipe</span></p>
-			<p>L'accrobranche est vraiment génial, je le recommande pour les enfants qui vont très bien s'amuser en grimpant dans les arbres...</p>
-		</div>
-		<div class="blabla">
-			<h3>Blablaland</h3>
-			<p>Ce texte ne sert à rien mais il est important de le recopier parce que c'est demandé dans le sujet, bon courage ! :)</p>
-		</div>
-	</div>
-	<div class="espace"></div>
-	<div id="footer">
-		<div id="contenu">
-			<div class="lien">
-				<p><a href="presse.html">Presse</a> | <a href="blog.html">Blog</a> | <a href="contacter.html">Nous contacter</a> | <a href="propos.html">A propos</a></p>
-				<p>Copyright © 2014 ABC Compagnie.</p>
+		<div class="espace"></div>
+		<div id="partie_trois">
+			<div class="contact">
+				<h3>Nous contacter</h3>
+				<p class="adresse">42 route des poneys</p>
+				<p>07007, Jardiland</p>
+				<p class="tel">+1 234 567 89 01</p>
+				<p class="email"><a href="mailto:contact@hotels.com">contact@hotels.com</a></p>
+				<p class="support"><a href="mailto:support@hotels.com">support@hotels.com</a></p>
 			</div>
-			<div class="vignette">
-				<a href="rss.html" title="rss"><img src="media/rss.png" alt="icone flux rss" /></a>
-				<a href="mailto:info@angelesbeachclubhotel.com" title="email"><img src="media/email.png" alt="icone email" /></a>
-				<a href="https://www.twitter.com" title="twitter"><img src="media/twitter.png" alt="icone twitter" /></a>
-				<a href="https://www.facebook.com/pages/ABC-Hotel-Angeles-City-Philippines/298041867304" title="facebook"><img src="media/facebook.png" alt="icone facebook" /></a>
-				<a href="http://www.pinterest.com/tequilareef/angeles-city-philippines/" title="pinterest"><img src="media/pinterest.png" alt="icone pinterest" /></a>
-				<a href="https://www.google.com" title="google"><img src="media/google.png" alt="icone google" /></a>
+			<div class="billet">
+				<h3>Dernier bilet</h3>
+				<p><span class="date">15 Sep 2019</span></p>
+				<p><span>Garde d'animaux</span></p>
+				<p>Nouveau service au sein de notre compagnie, laissez votre toutou une journée pour vous reposer....</p>
+				<a href="#">6 commentaires</a>
+			</div>
+			<div class="dernier_com">
+				<h3>Dernier commentaire</h3>
+				<p><span class="date">01 Mar 2020</span></p>
+				<p><span>Merci à toute l'équipe</span></p>
+				<p>L'accrobranche est vraiment génial, je le recommande pour les enfants qui vont très bien s'amuser en grimpant dans les arbres...</p>
+			</div>
+			<div class="blabla">
+				<h3>Blablaland</h3>
+				<p>Ce texte ne sert à rien mais il est important de le recopier parce que c'est demandé dans le sujet, bon courage ! :)</p>
+			</div>
+		</div>
+		<div class="espace"></div>
+		<div id="footer">
+			<div id="contenu">
+				<div class="lien">
+					<p><a href="#">Presse</a> | <a href="#">Blog</a> | <a href="#">Nous contacter</a> | <a href="#">A propos</a></p>
+					<p>Copyright © 2014 ABC Compagnie.</p>
+				</div>
+				<div class="vignette">
+					<a href="#" title="rss"><img src="media/img/rss.png" alt="icone flux rss" /></a>
+					<a href="mailto:info@angelesbeachclubhotel.com" title="email"><img src="media/img/email.png" alt="icone email" /></a>
+					<a href="https://www.twitter.com" title="twitter"><img src="media/img/twitter.png" alt="icone twitter" /></a>
+					<a href="https://www.facebook.com/pages/ABC-Hotel-Angeles-City-Philippines/298041867304" title="facebook"><img src="media/img/facebook.png" alt="icone facebook" /></a>
+					<a href="http://www.pinterest.com/tequilareef/angeles-city-philippines/" title="pinterest"><img src="media/img/pinterest.png" alt="icone pinterest" /></a>
+					<a href="https://www.google.com" title="google"><img src="media/img/google.png" alt="icone google" /></a>
+				</div>
 			</div>
 		</div>
 	</div>
